[package]
name = "butter-lad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.2"
bevy-inspector-egui = "0.19.0"
bevy_mod_outline = "0.5.0"
bevy_rapier3d = "0.22.0"
leafwing-input-manager = "0.10.0"
spooky_camera = {git = "https://github.com/spooky-th-ghost/spooky-camera"}
